--- a/finance/index.html
+++ b/finance/index.html
@@ -41,11 +41,11 @@ header{display:flex;align-items:center;justify-content:space-between;
 .back-btn:hover{border-color:var(--border);color:var(--dim)}
 .hdr-div{width:1px;height:18px;background:var(--border)}
 .logo{width:26px;height:26px;border-radius:50%;overflow:hidden;border:1px solid var(--border2);
-  flex-shrink:0;background:var(--bg3);display:flex;align-items:center;justify-content:center;font-size:11px}
-.logo img{width:100%;height:100%;object-fit:cover;object-position:top center}
+  flex-shrink:0;background:var(--bg3);display:flex;align-items:center;justify-content:center;font-size:11px;position:relative}
+.logo img{position:absolute;top:0;left:0;width:100%;height:100%;object-fit:cover;object-position:top center}
 .hdr-name{font-size:13px;font-weight:500;color:var(--bright);letter-spacing:.04em}
 .hdr-sub{font-size:9px;color:var(--muted);font-weight:300;margin-top:1px;letter-spacing:.1em;text-transform:uppercase}
-.hdr-clock{font-family:"JetBrains Mono",monospace;font-size:10px;color:var(--muted);
+.hdr-clock{font-family:"JetBrains Mono",monospace;font-size:10px;color:var(--dim);
   text-align:right;line-height:1.9;font-weight:300}
 
 .sum-bar{background:var(--bg2);border-bottom:1px solid var(--border);
@@ -123,7 +123,7 @@ main>div:nth-child(4){animation-delay:.24s}
   <div class="hdr-l">
     <a class="back-btn" href="../">‹ 返回</a>
     <div class="hdr-div"></div>
-    <div class="logo"><img src="../assets/avatar.png" alt="OC" onerror="this.style.display='none';this.parentElement.textContent='📊'"></div>
+    <div class="logo"><svg width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="white" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"><polyline points="3 17 9 11 13 15 21 6"/><polyline points="17 6 21 6 21 10"/><line x1="3" y1="20" x2="21" y2="20"/></svg><img src="../assets/avatar.png" alt="OC" onerror="this.remove()"></div>
     <div>
       <div class="hdr-name">理財分析師</div>
       <div class="hdr-sub">股票 · 帳務 · KDJ</div>
