--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@ header.scrolled{
 }
 .hdr-clock{
   font-family:"JetBrains Mono",monospace;
-  font-size:10px;color:var(--muted);text-align:right;line-height:1.9;
+  font-size:10px;color:var(--dim);text-align:right;line-height:1.9;
   font-weight:300;
 }
 
@@ -109,12 +109,12 @@ header.scrolled{
   padding:0 32px;height:var(--info-h);
   display:flex;align-items:center;justify-content:space-between;
   position:sticky;top:var(--hdr-h);z-index:195;
-  font-size:10px;color:var(--muted);white-space:nowrap;overflow:hidden;
+  font-size:10px;color:var(--dim);white-space:nowrap;overflow:hidden;
   transition:top .35s ease;
 }
 .ib-weather{display:flex;align-items:center;gap:5px}
-.ib-weather b{color:var(--dim);font-weight:400}
-.ib-lunar{font-size:9px;letter-spacing:.08em}
+.ib-weather b{color:var(--bright);font-weight:400}
+.ib-lunar{font-size:9px;letter-spacing:.08em;color:var(--text)}
 
 /* ── ALERT STRIP ── */
 #alert-strip{
@@ -507,7 +507,11 @@ const TYPE_LBL={remittance:"💳 匯款",alert:"🔔 提醒",task:"任務"};
 function isWarn(t){return t.priority==="urgent"||t.type==="remittance"||t.status==="阻塞";}
 function isSched(t){return t.time&&t.time!=="-"&&t.freq&&t.freq!=="-";}
 function chipCls(t){return t.type==="remittance"?"r":t.status==="阻塞"?"b":"u";}
-function chipIcon(t){return t.type==="remittance"?"💳":t.status==="阻塞"?"🚫":"⚡";}
+function chipIcon(t){
+  if(t.type==="remittance") return `<svg width="11" height="11" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><rect x="2" y="5" width="20" height="14" rx="2"/><line x1="2" y1="10" x2="22" y2="10"/></svg>`;
+  if(t.status==="阻塞") return `<svg width="11" height="11" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><circle cx="12" cy="12" r="10"/><line x1="4.93" y1="4.93" x2="19.07" y2="19.07"/></svg>`;
+  return `<svg width="11" height="11" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M10.29 3.86L1.82 18a2 2 0 0 0 1.71 3h16.94a2 2 0 0 0 1.71-3L13.71 3.86a2 2 0 0 0-3.42 0z"/><line x1="12" y1="9" x2="12" y2="13"/><line x1="12" y1="17" x2="12.01" y2="17"/></svg>`;
+}
 function fmtTs(iso){
   if(!iso||iso==="-") return "-";
   const d=new Date(iso);if(isNaN(d)) return iso;
