個人財務：收入改白色、退休金數字加大加亮

--- a/personal/index.html
+++ b/personal/index.html
@@ -94,7 +94,7 @@ main{max-width:880px;margin:0 auto;padding:40px 32px;display:flex;flex-direction
 .pension-grid{display:grid;grid-template-columns:1fr 1fr;gap:8px;margin-bottom:12px}
 .p-box{background:var(--bg3);border-radius:var(--radius-xs);padding:12px;
   text-align:center;border:1px solid var(--border)}
-.p-val{font-size:16px;font-weight:300;color:var(--blocked-text);font-family:"JetBrains Mono",monospace}
+.p-val{font-size:22px;font-weight:300;color:var(--bright);font-family:"JetBrains Mono",monospace}
 .p-lbl{font-size:8px;color:var(--muted);margin-bottom:4px;letter-spacing:.1em;text-transform:uppercase}
 
 .tx-summary{display:grid;grid-template-columns:repeat(4,1fr);
@@ -104,7 +104,7 @@ main{max-width:880px;margin:0 auto;padding:40px 32px;display:flex;flex-direction
 .tx-sum-item+.tx-sum-item{border-left:1px solid var(--border)}
 .tx-sum-lbl{font-size:8px;color:var(--muted);letter-spacing:.12em;text-transform:uppercase;margin-bottom:5px}
 .tx-sum-val{font-size:14px;font-weight:300;font-family:"JetBrains Mono",monospace}
-.tx-sum-val.income{color:var(--inc)}.tx-sum-val.expense{color:var(--exp)}
+.tx-sum-val.income{color:var(--bright)}.tx-sum-val.expense{color:var(--exp)}
 .tx-sum-val.pos{color:var(--inc)}.tx-sum-val.neg{color:var(--exp)}.tx-sum-val.neutral{color:var(--dim)}
 
 .tx-row{display:flex;align-items:center;gap:10px;padding:9px 0;
@@ -117,7 +117,7 @@ main{max-width:880px;margin:0 auto;padding:40px 32px;display:flex;flex-direction
 .tx-note{font-size:9px;color:var(--muted);flex-shrink:0;max-width:80px;
   overflow:hidden;text-overflow:ellipsis;white-space:nowrap}
 .tx-amount{font-family:"JetBrains Mono",monospace;font-weight:400;flex-shrink:0}
-.tx-amount.tx-income{color:var(--inc)}.tx-amount.tx-expense{color:var(--exp)}
+.tx-amount.tx-income{color:var(--bright)}.tx-amount.tx-expense{color:var(--exp)}
 
 @media(max-width:1024px){
   main,header{padding-left:24px;padding-right:24px}
