--- a/personal/index.html
+++ b/personal/index.html
@@ -60,7 +60,7 @@ header{display:flex;align-items:center;justify-content:space-between;
 .hero-kpi{text-align:center}
 .hero-kpi .k-val{font-size:16px;font-weight:400;font-family:"JetBrains Mono",monospace;color:var(--bright)}
 .hero-kpi .k-lbl{font-size:8px;opacity:.5;margin-top:3px;letter-spacing:.12em;text-transform:uppercase;color:var(--muted)}
-.hero-kpi.green .k-val{color:var(--inc)}
+.hero-kpi.green .k-val{color:#D4AF37}
 
 main{max-width:880px;margin:0 auto;padding:40px 32px;display:flex;flex-direction:column;gap:36px}
 .grid2{display:grid;grid-template-columns:1fr 1fr;gap:12px}
@@ -81,7 +81,7 @@ main{max-width:880px;margin:0 auto;padding:40px 32px;display:flex;flex-direction
 .avail-box{border:1px solid var(--inc-bd);border-radius:var(--radius-xs);
   padding:12px 16px;margin-top:12px;display:flex;justify-content:space-between;align-items:center}
 .avail-box .lbl{font-size:10px;color:var(--inc);font-weight:400;letter-spacing:.06em}
-.avail-box .val{font-size:20px;font-weight:300;color:var(--bright);font-family:"JetBrains Mono",monospace}
+.avail-box .val{font-size:20px;font-weight:300;color:#D4AF37;font-family:"JetBrains Mono",monospace}
 .avail-note{font-size:9px;color:var(--muted);margin-top:4px;letter-spacing:.04em}
 
 .stock-row{display:flex;justify-content:space-between;align-items:center;
@@ -105,7 +105,7 @@ main{max-width:880px;margin:0 auto;padding:40px 32px;display:flex;flex-direction
 .tx-sum-lbl{font-size:8px;color:var(--muted);letter-spacing:.12em;text-transform:uppercase;margin-bottom:5px}
 .tx-sum-val{font-size:14px;font-weight:300;font-family:"JetBrains Mono",monospace}
 .tx-sum-val.income{color:var(--bright)}.tx-sum-val.expense{color:var(--exp)}
-.tx-sum-val.pos{color:var(--inc)}.tx-sum-val.neg{color:var(--exp)}.tx-sum-val.neutral{color:var(--dim)}
+.tx-sum-val.pos{color:#D4AF37}.tx-sum-val.neg{color:var(--exp)}.tx-sum-val.neutral{color:var(--dim)}
 
 .tx-row{display:flex;align-items:center;gap:10px;padding:9px 0;
   border-bottom:1px solid var(--border);font-size:12px}
